[fix]: fixed the gap between the categories (skincreator)

--- a/resources/[essentials]/crp-ui/nui/src/components/character/skincreator/skincreator.scss
+++ b/resources/[essentials]/crp-ui/nui/src/components/character/skincreator/skincreator.scss
@@ -23,7 +23,6 @@
 		display: flex;
 		flex-wrap: wrap;
 		flex-direction: column;
-		gap: 5px;
 
 		width: 100%;
 		max-height: 64px;
@@ -50,7 +49,11 @@
 
 			flex: 1 1 0;
 			padding: 0;
-			margin: 0;
+			margin: 1.5px;
+
+			&.active {
+				background-color: rgba(29, 132, 230, 1.0);
+			}
 		}
 	}
 
@@ -138,13 +141,17 @@
 				border-radius: 3px;
 				background-color: #232323;
 
+				&.range {
+					display: grid;
+    				grid-template-rows: 1fr 0.5fr;
+				}
+
 				&:last-child {
 					margin-bottom: 0;
 				}
 
 				.label-container {
 					display: flex;
-					height: 50%;
 
 					flex-direction: row;
 					justify-content: space-between;
